--- a/lectures/python/01_intro/02_surving_kit.ipynb
+++ b/lectures/python/01_intro/02_surving_kit.ipynb
@@ -13,63 +13,368 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello_world\n",
+      "endoftheline command"
+     ]
+    }
+   ],
    "source": [
-    "print(\"hello\", \"world\")"
+    "print(\"hello\", \"world\",sep=\"_\",end=\"\\nendoftheline command\") #sep is usually set on blankspace, end is newline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "<class 'bool'>\n",
+      "<class 'type'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(\"hello\"))\n",
     "print(type(1))\n",
-    "print(type(True))"
+    "print(type(True))\n",
+    "print(type(type))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on int object:\n",
+      "\n",
+      "class int(object)\n",
+      " |  int(x=0) -> integer\n",
+      " |  int(x, base=10) -> integer\n",
+      " |  \n",
+      " |  Convert a number or string to an integer, or return 0 if no arguments\n",
+      " |  are given.  If x is a number, return x.__int__().  For floating point\n",
+      " |  numbers, this truncates towards zero.\n",
+      " |  \n",
+      " |  If x is not a number or if base is given, then x must be a string,\n",
+      " |  bytes, or bytearray instance representing an integer literal in the\n",
+      " |  given base.  The literal can be preceded by '+' or '-' and be surrounded\n",
+      " |  by whitespace.  The base defaults to 10.  Valid bases are 0 and 2-36.\n",
+      " |  Base 0 means to interpret the base from the string as an integer literal.\n",
+      " |  >>> int('0b100', base=0)\n",
+      " |  4\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __abs__(self, /)\n",
+      " |      abs(self)\n",
+      " |  \n",
+      " |  __add__(self, value, /)\n",
+      " |      Return self+value.\n",
+      " |  \n",
+      " |  __and__(self, value, /)\n",
+      " |      Return self&value.\n",
+      " |  \n",
+      " |  __bool__(self, /)\n",
+      " |      self != 0\n",
+      " |  \n",
+      " |  __ceil__(...)\n",
+      " |      Ceiling of an Integral returns itself.\n",
+      " |  \n",
+      " |  __divmod__(self, value, /)\n",
+      " |      Return divmod(self, value).\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __float__(self, /)\n",
+      " |      float(self)\n",
+      " |  \n",
+      " |  __floor__(...)\n",
+      " |      Flooring an Integral returns itself.\n",
+      " |  \n",
+      " |  __floordiv__(self, value, /)\n",
+      " |      Return self//value.\n",
+      " |  \n",
+      " |  __format__(...)\n",
+      " |      default object formatter\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __getnewargs__(...)\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __hash__(self, /)\n",
+      " |      Return hash(self).\n",
+      " |  \n",
+      " |  __index__(self, /)\n",
+      " |      Return self converted to an integer, if self is suitable for use as an index into a list.\n",
+      " |  \n",
+      " |  __int__(self, /)\n",
+      " |      int(self)\n",
+      " |  \n",
+      " |  __invert__(self, /)\n",
+      " |      ~self\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __lshift__(self, value, /)\n",
+      " |      Return self<<value.\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __mod__(self, value, /)\n",
+      " |      Return self%value.\n",
+      " |  \n",
+      " |  __mul__(self, value, /)\n",
+      " |      Return self*value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __neg__(self, /)\n",
+      " |      -self\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  __or__(self, value, /)\n",
+      " |      Return self|value.\n",
+      " |  \n",
+      " |  __pos__(self, /)\n",
+      " |      +self\n",
+      " |  \n",
+      " |  __pow__(self, value, mod=None, /)\n",
+      " |      Return pow(self, value, mod).\n",
+      " |  \n",
+      " |  __radd__(self, value, /)\n",
+      " |      Return value+self.\n",
+      " |  \n",
+      " |  __rand__(self, value, /)\n",
+      " |      Return value&self.\n",
+      " |  \n",
+      " |  __rdivmod__(self, value, /)\n",
+      " |      Return divmod(value, self).\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __rfloordiv__(self, value, /)\n",
+      " |      Return value//self.\n",
+      " |  \n",
+      " |  __rlshift__(self, value, /)\n",
+      " |      Return value<<self.\n",
+      " |  \n",
+      " |  __rmod__(self, value, /)\n",
+      " |      Return value%self.\n",
+      " |  \n",
+      " |  __rmul__(self, value, /)\n",
+      " |      Return value*self.\n",
+      " |  \n",
+      " |  __ror__(self, value, /)\n",
+      " |      Return value|self.\n",
+      " |  \n",
+      " |  __round__(...)\n",
+      " |      Rounding an Integral returns itself.\n",
+      " |      Rounding with an ndigits argument also returns an integer.\n",
+      " |  \n",
+      " |  __rpow__(self, value, mod=None, /)\n",
+      " |      Return pow(value, self, mod).\n",
+      " |  \n",
+      " |  __rrshift__(self, value, /)\n",
+      " |      Return value>>self.\n",
+      " |  \n",
+      " |  __rshift__(self, value, /)\n",
+      " |      Return self>>value.\n",
+      " |  \n",
+      " |  __rsub__(self, value, /)\n",
+      " |      Return value-self.\n",
+      " |  \n",
+      " |  __rtruediv__(self, value, /)\n",
+      " |      Return value/self.\n",
+      " |  \n",
+      " |  __rxor__(self, value, /)\n",
+      " |      Return value^self.\n",
+      " |  \n",
+      " |  __sizeof__(...)\n",
+      " |      Returns size in memory, in bytes\n",
+      " |  \n",
+      " |  __str__(self, /)\n",
+      " |      Return str(self).\n",
+      " |  \n",
+      " |  __sub__(self, value, /)\n",
+      " |      Return self-value.\n",
+      " |  \n",
+      " |  __truediv__(self, value, /)\n",
+      " |      Return self/value.\n",
+      " |  \n",
+      " |  __trunc__(...)\n",
+      " |      Truncating an Integral returns itself.\n",
+      " |  \n",
+      " |  __xor__(self, value, /)\n",
+      " |      Return self^value.\n",
+      " |  \n",
+      " |  bit_length(...)\n",
+      " |      int.bit_length() -> int\n",
+      " |      \n",
+      " |      Number of bits necessary to represent self in binary.\n",
+      " |      >>> bin(37)\n",
+      " |      '0b100101'\n",
+      " |      >>> (37).bit_length()\n",
+      " |      6\n",
+      " |  \n",
+      " |  conjugate(...)\n",
+      " |      Returns self, the complex conjugate of any int.\n",
+      " |  \n",
+      " |  from_bytes(...) from builtins.type\n",
+      " |      int.from_bytes(bytes, byteorder, *, signed=False) -> int\n",
+      " |      \n",
+      " |      Return the integer represented by the given array of bytes.\n",
+      " |      \n",
+      " |      The bytes argument must be a bytes-like object (e.g. bytes or bytearray).\n",
+      " |      \n",
+      " |      The byteorder argument determines the byte order used to represent the\n",
+      " |      integer.  If byteorder is 'big', the most significant byte is at the\n",
+      " |      beginning of the byte array.  If byteorder is 'little', the most\n",
+      " |      significant byte is at the end of the byte array.  To request the native\n",
+      " |      byte order of the host system, use `sys.byteorder' as the byte order value.\n",
+      " |      \n",
+      " |      The signed keyword-only argument indicates whether two's complement is\n",
+      " |      used to represent the integer.\n",
+      " |  \n",
+      " |  to_bytes(...)\n",
+      " |      int.to_bytes(length, byteorder, *, signed=False) -> bytes\n",
+      " |      \n",
+      " |      Return an array of bytes representing an integer.\n",
+      " |      \n",
+      " |      The integer is represented using length bytes.  An OverflowError is\n",
+      " |      raised if the integer is not representable with the given number of\n",
+      " |      bytes.\n",
+      " |      \n",
+      " |      The byteorder argument determines the byte order used to represent the\n",
+      " |      integer.  If byteorder is 'big', the most significant byte is at the\n",
+      " |      beginning of the byte array.  If byteorder is 'little', the most\n",
+      " |      significant byte is at the end of the byte array.  To request the native\n",
+      " |      byte order of the host system, use `sys.byteorder' as the byte order value.\n",
+      " |      \n",
+      " |      The signed keyword-only argument determines whether two's complement is\n",
+      " |      used to represent the integer.  If signed is False and a negative integer\n",
+      " |      is given, an OverflowError is raised.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  denominator\n",
+      " |      the denominator of a rational number in lowest terms\n",
+      " |  \n",
+      " |  imag\n",
+      " |      the imaginary part of a complex number\n",
+      " |  \n",
+      " |  numerator\n",
+      " |      the numerator of a rational number in lowest terms\n",
+      " |  \n",
+      " |  real\n",
+      " |      the real part of a complex number\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "help(1)\n"
+    "help(1) #methods are ____name____ function defined in classes. dunder or magic methods:__ You should never\n",
+    "#call explicitely a magic method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on NoneType object:\n",
+      "\n",
+      "class NoneType(object)\n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __bool__(self, /)\n",
+      " |      self != 0\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "help(None)"
+    "help(None) #special class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BBBB', 'FFFF', 'IIII', 'In', 'Out', 'SSSS', '_', '__', '___', '__builtin__', '__builtins__', '__doc__', '__loader__', '__name__', '__package__', '__spec__', '_dh', '_i', '_i1', '_i10', '_i2', '_i3', '_i4', '_i5', '_i6', '_i7', '_i8', '_i9', '_ih', '_ii', '_iii', '_oh', 'exit', 'get_ipython', 'quit']\n"
+     ]
+    }
+   ],
    "source": [
     "IIII = 1\n",
     "FFFF = 3.3\n",
     "SSSS = 'cc'\n",
     "BBBB = False\n",
     "\n",
-    "print(dir())"
+    "print(dir())\n",
+    "#dir() prints all the symbols+functions in the current environment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__abs__', '__add__', '__and__', '__bool__', '__ceil__', '__class__', '__delattr__', '__dir__', '__divmod__', '__doc__', '__eq__', '__float__', '__floor__', '__floordiv__', '__format__', '__ge__', '__getattribute__', '__getnewargs__', '__gt__', '__hash__', '__index__', '__init__', '__init_subclass__', '__int__', '__invert__', '__le__', '__lshift__', '__lt__', '__mod__', '__mul__', '__ne__', '__neg__', '__new__', '__or__', '__pos__', '__pow__', '__radd__', '__rand__', '__rdivmod__', '__reduce__', '__reduce_ex__', '__repr__', '__rfloordiv__', '__rlshift__', '__rmod__', '__rmul__', '__ror__', '__round__', '__rpow__', '__rrshift__', '__rshift__', '__rsub__', '__rtruediv__', '__rxor__', '__setattr__', '__sizeof__', '__str__', '__sub__', '__subclasshook__', '__truediv__', '__trunc__', '__xor__', 'bit_length', 'conjugate', 'denominator', 'from_bytes', 'imag', 'numerator', 'real', 'to_bytes']\n"
+     ]
+    }
+   ],
    "source": [
-    "print(dir(1))"
+    "print(dir(1)) #methods for the class of 1. "
    ]
   },
   {
@@ -112,9 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "other color\n"
+     ]
+    }
+   ],
    "source": [
     "color = \"red\"\n",
     "if color == \"blue\":\n",
@@ -135,14 +448,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      " 71           0 LOAD_FAST                0 (tb)\n",
+      "              2 LOAD_CONST               1 (None)\n",
+      "              4 COMPARE_OP               8 (is)\n",
+      "              6 POP_JUMP_IF_FALSE       66\n",
+      "\n",
+      " 72           8 SETUP_EXCEPT            10 (to 20)\n",
+      "\n",
+      " 73          10 LOAD_GLOBAL              0 (sys)\n",
+      "             12 LOAD_ATTR                1 (last_traceback)\n",
+      "             14 STORE_FAST               0 (tb)\n",
+      "             16 POP_BLOCK\n",
+      "             18 JUMP_FORWARD            28 (to 48)\n",
+      "\n",
+      " 74     >>   20 DUP_TOP\n",
+      "             22 LOAD_GLOBAL              2 (AttributeError)\n",
+      "             24 COMPARE_OP              10 (exception match)\n",
+      "             26 POP_JUMP_IF_FALSE       46\n",
+      "             28 POP_TOP\n",
+      "             30 POP_TOP\n",
+      "             32 POP_TOP\n",
+      "\n",
+      " 75          34 LOAD_GLOBAL              3 (RuntimeError)\n",
+      "             36 LOAD_CONST               2 ('no last traceback to disassemble')\n",
+      "             38 CALL_FUNCTION            1\n",
+      "    -->      40 RAISE_VARARGS            1\n",
+      "             42 POP_EXCEPT\n",
+      "             44 JUMP_FORWARD             2 (to 48)\n",
+      "        >>   46 END_FINALLY\n",
+      "\n",
+      " 76     >>   48 SETUP_LOOP              16 (to 66)\n",
+      "        >>   50 LOAD_FAST                0 (tb)\n",
+      "             52 LOAD_ATTR                4 (tb_next)\n",
+      "             54 POP_JUMP_IF_FALSE       64\n",
+      "             56 LOAD_FAST                0 (tb)\n",
+      "             58 LOAD_ATTR                4 (tb_next)\n",
+      "             60 STORE_FAST               0 (tb)\n",
+      "             62 JUMP_ABSOLUTE           50\n",
+      "        >>   64 POP_BLOCK\n",
+      "\n",
+      " 77     >>   66 LOAD_GLOBAL              5 (disassemble)\n",
+      "             68 LOAD_FAST                0 (tb)\n",
+      "             70 LOAD_ATTR                6 (tb_frame)\n",
+      "             72 LOAD_ATTR                7 (f_code)\n",
+      "             74 LOAD_FAST                0 (tb)\n",
+      "             76 LOAD_ATTR                8 (tb_lasti)\n",
+      "             78 LOAD_FAST                1 (file)\n",
+      "             80 LOAD_CONST               3 (('file',))\n",
+      "             82 CALL_FUNCTION_KW         3\n",
+      "             84 POP_TOP\n",
+      "             86 LOAD_CONST               1 (None)\n",
+      "             88 RETURN_VALUE\n"
+     ]
+    }
+   ],
    "source": [
     "from dis import dis\n",
     "\n",
-    "dis(print(\"hello\",\"world\"))"
+    "dis(print(\"hello\",\"world\")) #return the assembly"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -161,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
