--- a/lectures/python/01_intro/05_dictionaries.ipynb
+++ b/lectures/python/01_intro/05_dictionaries.ipynb
@@ -14,9 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "empty_dict = {} # or empty_dict = dict()\n",
     "print(type(empty_dict))"
@@ -24,9 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alberto': 32, 'Antonella': 21, 'Stefano': 42, 'Family': [4, 5, 32, 37]}\n"
+     ]
+    }
+   ],
    "source": [
     "age_dict = {\"Alberto\":32,\n",
     "            \"Antonella\":21,\n",
@@ -47,33 +63,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alberto': 32, 'Antonella': 21, 'Stefano': 42, 'Family': [4, 5, 32, 37]}\n"
+     ]
+    }
+   ],
    "source": [
     "lot = [(\"Alberto\", 32), (\"Antonella\", 21), (\"Stefano\",42),\n",
-    "     (\"Family\",[4,5,32,37])]\n",
+    "     (\"Family\",[4,5,32,37])] #list of tuples\n",
     "age_dict = dict(lot)\n",
     "print(age_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alberto': 32, 'Antonella': 21, 'Stefano': 42, 'Family': [4, 5, 32, 37]}\n"
+     ]
+    }
+   ],
    "source": [
-    "tof = ([\"Alberto\", 32], [\"Antonella\", 21], [\"Stefano\",42],\n",
-    "       [\"Family\",[4,5,32,37]])\n",
-    "age_dict = dict(tof)\n",
+    "tol = ([\"Alberto\", 32], [\"Antonella\", 21], [\"Stefano\",42],\n",
+    "       [\"Family\",[4,5,32,37]]) #tuple of list\n",
+    "age_dict = dict(tol)\n",
     "print(age_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alberto': 32, 'Antonella': 21, 'Stefano': 42, 'Family': [4, 5, 32, 37]}\n"
+     ]
+    }
+   ],
    "source": [
     "names = [\"Alberto\", \"Antonella\", \"Stefano\", \"Family\"]\n",
     "ages = [32,21,42,[4,5,32,37]]\n",
@@ -90,9 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age of Alberto 32\n",
+      "age of Alberto 33\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"age of Alberto\", age_dict['Alberto'])\n",
     "age_dict['Alberto'] += 1\n",
@@ -101,9 +150,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'not in dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-2da674f9aa03>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mage_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"not in dict\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'not in dict'"
+     ]
+    }
+   ],
    "source": [
     "print(age_dict[\"not in dict\"]) # error"
    ]
@@ -117,9 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "print(age_dict.get(\"not in dict\", -1))"
    ]
@@ -133,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,13 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Alberto\" in age_dict)\n",
-    "print(\"Unknown\" in age_dict)\n",
-    "print(\"Unknown\" not in age_dict)"
+    "print(\"Unknown\" in age_dict) #check if a key it's present\n",
+    "print(\"Unknown\" not in age_dict) #check if a key's not present"
    ]
   },
   {
@@ -167,9 +246,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__contains__', '__delattr__', '__delitem__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'clear', 'copy', 'fromkeys', 'get', 'items', 'keys', 'pop', 'popitem', 'setdefault', 'update', 'values']\n"
+     ]
+    }
+   ],
    "source": [
     "print(dir(age_dict))"
    ]
@@ -183,9 +270,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alberto\n",
+      "Antonella\n",
+      "Stefano\n",
+      "Family\n",
+      "New key\n",
+      "33\n",
+      "21\n",
+      "42\n",
+      "[4, 5, 32, 37]\n",
+      "55\n",
+      "('Alberto', 33)\n",
+      "('Antonella', 21)\n",
+      "('Stefano', 42)\n",
+      "('Family', [4, 5, 32, 37])\n",
+      "('New key', 55)\n"
+     ]
+    }
+   ],
    "source": [
     "for k in age_dict.keys():\n",
     "    print (k)\n",
@@ -206,9 +315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Antonella': 21, 'Stefano': 42, 'Family': [4, 5, 32, 37], 'New key': 55}\n"
+     ]
+    }
+   ],
    "source": [
     "del age_dict[\"Alberto\"]\n",
     "print(age_dict)"
@@ -223,14 +340,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('Alberto', 32), ('Antonella', 21), ('Stefano', 42), ('Family', [4, 5, 32, 37])])\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import OrderedDict\n",
     "ordered_dict = OrderedDict(zip(names,ages))\n",
     "print(ordered_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -249,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
