--- a/lectures/python/01_intro/07_functions.ipynb
+++ b/lectures/python/01_intro/07_functions.ipynb
@@ -16,56 +16,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def foo(*positional, **keywords):\n",
+    "def foo(*positional, **keywords): #arbitrary number of positional and every keyword\n",
     "    print(\"Positional:\", positional, end='\\t')\n",
     "    print(\"Keywords:\", keywords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positional: ('1st', '2nd', '3rd')\tKeywords: {}\n"
+     ]
+    }
+   ],
    "source": [
     "foo('1st', '2nd', '3rd')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positional: ()\tKeywords: {'par1': '1st', 'par2': '2nd', 'par3': '3rd'}\n"
+     ]
+    }
+   ],
    "source": [
-    "foo(par1='1st', par2='2nd', par3='3rd')"
+    "foo(par1='1st', par2='2nd', par3='3rd') #keywords always after positional arguments unless use *. key=value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positional: ('1st',)\tKeywords: {'par2': '2nd', 'par3': '3rd'}\n"
+     ]
+    }
+   ],
    "source": [
     "foo('1st', par2='2nd', par3='3rd')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positional: ('tuple', 'unpacking')\tKeywords: {'par1': '1st_key', 'par2': '2nd_key'}\n"
+     ]
+    }
+   ],
    "source": [
     "foo(par1='1st_key',*('tuple','unpacking'), par2='2nd_key')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positional: ('1st_pos', '2st_pos', '3rd_pos')\tKeywords: {'par1': '1st_key', 'par2': '2nd_key'}\n"
+     ]
+    }
+   ],
    "source": [
     "foo(par1='1st_key',*['1st_pos'], par2='2nd_key',*['2st_pos','3rd_pos'])"
    ]
@@ -79,9 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1, [2, 3, 4])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a,b,*rest = range(5)\n",
     "a,b,rest"
@@ -89,9 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 [1, 2] 3 4\n"
+     ]
+    }
+   ],
    "source": [
     "a,*body,c,d = range(5)\n",
     "print(a,body,c,d)"
@@ -99,18 +158,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "two starred expressions in assignment (<ipython-input-14-e09f43196a1e>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-e09f43196a1e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    *head, a,b, *wrong = range(5) # only one * is allowed\u001b[0m\n\u001b[0m                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m two starred expressions in assignment\n"
+     ]
+    }
+   ],
    "source": [
     "*head, a,b, *wrong = range(5) # only one * is allowed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "*_, last = range(5)\n",
     "print(last)"
@@ -125,16 +201,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokyo 35.689 139.692\n",
+      "San Paulo -23.547 -46.6358\n"
+     ]
+    }
+   ],
    "source": [
     "cities = [('Tokyo', 'JP', 'un', 'important', 'fields',(35.689,139.692)),\n",
     "          ('San Paulo', 'BR','not', 'relevant', 'fields',(-23.547,-46.6358))]\n",
     "\n",
-    "for city, *_, latitude, longitude in cities:\n",
+    "for city, *_, (latitude, longitude) in cities:\n",
     "    print(city, latitude, longitude)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -153,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
