--- a/lectures/python/02_variables_and_functions/01_modules_and_packages.ipynb
+++ b/lectures/python/02_variables_and_functions/01_modules_and_packages.ipynb
@@ -9,21 +9,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "def foo():\r\n",
+      "    print('Fooing')\r\n",
+      "\r\n",
+      "def bar():\r\n",
+      "    print('Barring')\r\n"
+     ]
+    }
+   ],
    "source": [
     "!cat my_module.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fooing\n",
+      "Barring\n"
+     ]
+    }
+   ],
    "source": [
-    "%reset -f\n",
-    "import my_module\n",
+    "%reset -f #\n",
+    "import my_module #it's like populating a namespace named my_module\n",
     "my_module.foo()\n",
     "my_module.bar()\n",
     "# foo() # error"
@@ -31,9 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fooing\n"
+     ]
+    }
+   ],
    "source": [
     "%reset -f\n",
     "from my_module import foo\n",
@@ -43,9 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fooing\n",
+      "Barring\n"
+     ]
+    }
+   ],
    "source": [
     "%reset -f\n",
     "import my_module as mm\n",
@@ -55,21 +93,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fooing\n",
+      "Barring\n"
+     ]
+    }
+   ],
    "source": [
     "%reset -f\n",
-    "from my_module import *\n",
+    "from my_module import * #populate the global namespace with content of my_module\n",
     "foo()\n",
     "bar()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fooing\n"
+     ]
+    }
+   ],
    "source": [
     "%reset -f\n",
     "from my_module import foo as alternative_name_for_foo\n",
@@ -85,12 +140,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '/home/simone/anaconda3/envs/python_env/lib/python36.zip', '/home/simone/anaconda3/envs/python_env/lib/python3.6', '/home/simone/anaconda3/envs/python_env/lib/python3.6/lib-dynload', '/home/simone/anaconda3/envs/python_env/lib/python3.6/site-packages', '/home/simone/anaconda3/envs/python_env/lib/python3.6/site-packages/IPython/extensions', '/home/simone/.ipython']\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
-    "print(sys.path)"
+    "print(sys.path) #important that the first output is '': it's in the current directory!\n",
+    "#a __pycache__ it's created in your directory: it's a binary file which contains the module already loaded.\n",
+    "  #it helps u having a faster importing time"
    ]
   },
   {
@@ -109,9 +174,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/sh: 1: tree: not found\r\n"
+     ]
+    }
+   ],
    "source": [
     "!tree my_package/"
    ]
@@ -125,9 +198,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fooing from a package\n",
+      "Barring from a package\n"
+     ]
+    }
+   ],
    "source": [
     "%reset -f\n",
     "import my_package.foo_module # import submodule\n",
@@ -167,7 +249,8 @@
    "outputs": [],
    "source": [
     "%reset -f\n",
-    "from my_package.foo_module import *\n",
+    "from my_package.foo_module import * #import all of the functions contained in\n",
+    "    #__all__. Usually all, but can be differently\n",
     "foo()"
    ]
   },
@@ -197,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt #import package.module as alias\n",
     "from IPython.display import Image"
    ]
   },
@@ -236,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
