--- a/lectures/python/02_variables_and_functions/06_nasty_bugs.ipynb
+++ b/lectures/python/02_variables_and_functions/06_nasty_bugs.ipynb
@@ -9,25 +9,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('i',)\n"
+     ]
+    }
+   ],
    "source": [
     "def define_methods(number):\n",
     "    methods = []                       \n",
     "    for i in range(number):     \n",
     "        methods.append(lambda var: 2*var + i )\n",
     "    return methods\n",
-    "funcs = define_methods(10)\n",
+    "funcs = define_methods(10) #list of 10 functions, funcs[i](n) return 2*n+i\n",
     "\n",
-    "funcs[2](20) # expect 2*20 + 2"
+    "funcs[2](20) # expect 2*20 + 2\n",
+    "#Why? lambda creates a closure:it captured i as free variable\n",
+    "print (funcs[2].__code__.co_freevars)\n",
+    "#the last value of i is 9, so it returns it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def define_methods(number):\n",
     "    methods = []                       \n",
@@ -36,7 +58,8 @@
     "    return methods\n",
     "funcs = define_methods(10)\n",
     "\n",
-    "funcs[2](20) # expect 2*20 + 2"
+    "funcs[2](20) # expect 2*20 + 2\n",
+    "#exactly like C++: capture i"
    ]
   },
   {
@@ -49,9 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['you visited func function']\n"
+     ]
+    }
+   ],
    "source": [
     "def func(a=[]):\n",
     "    a += ['you visited func function']\n",
@@ -63,9 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['under control', 'you visited func function']\n"
+     ]
+    }
+   ],
    "source": [
     "l_custom = func(['under control'])\n",
     "print(l_custom)"
@@ -73,23 +112,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['you visited func function', 'you visited func function']\n",
+      "['you visited func function', 'you visited func function', 'ciao']\n"
+     ]
+    }
+   ],
    "source": [
     "OMG = func()\n",
     "print(OMG)\n",
+    "#why are there 2?\n",
     "OMG.append('ciao')\n",
     "print(OMG)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['you visited func function', 'you visited func function', 'ciao']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "l_default"
+    "l_default #l_default changes\n",
+    "#default argument is created only once and is a mutable object! so the first time ok. u append. Fine.\n",
+    " #But you've appended to the default and will stay there!"
    ]
   },
   {
@@ -101,13 +163,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def func(a=None):\n",
     "    '''returns a list'''\n",
-    "    if a:\n",
+    "    if a: #like if a!=None:\n",
     "        a = list(a) + ['you visited func function']\n",
     "    else:\n",
     "        a = ['you visited func function']\n",
@@ -116,9 +178,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['first', 2, 'you visited func function']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = func(('first',2))\n",
     "a"
@@ -141,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
