--- a/lectures/python/03_advanced_topics/02_property.ipynb
+++ b/lectures/python/03_advanced_topics/02_property.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "##  Property\n",
+    "- it's a decorator in the standard library\n",
     "- make an attribute **constant** (read only)\n",
     "- perform specific actions (e.g., error checking, pre/post-conditions) when an attribute is **set** "
    ]
@@ -18,9 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 4\n"
+     ]
+    }
+   ],
    "source": [
     "class Point():\n",
     "    def __init__(self, x,y):\n",
@@ -30,9 +39,9 @@
     "    # other methods are omitted\n",
     "\n",
     "def use_point(p):\n",
-    "    # complicated stuff\n",
-    "    p.x = 0 # bug, I would like to have p.x, p.y const\n",
-    "\n",
+    "    # complicated stuff: const does not exist in python because everything is passed by sharing\n",
+    "    p.x = 0 # bug, I would like to have p.x, p.y const:in order to prevent it u use property\n",
+    "    \n",
     "p = Point(3,4)\n",
     "\n",
     "use_point(p)\n",
@@ -42,9 +51,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "can't set attribute",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-04362207df0c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0muse_point\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-11-04362207df0c>\u001b[0m in \u001b[0;36muse_point\u001b[0;34m(p)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0muse_point\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# complicated stuff\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;31m# I expect an error: x and y are supposed to be constant\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0;31m#p._x=0 works\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: can't set attribute"
+     ]
+    }
+   ],
    "source": [
     "class Point():\n",
     "    def __init__(self, x,y):\n",
@@ -62,7 +84,8 @@
     "\n",
     "def use_point(p):\n",
     "    # complicated stuff\n",
-    "    p.x = 0 # I expect an error\n",
+    "    p.x = 0 # I expect an error: x and y are supposed to be constant\n",
+    "    #p._x=0 works\n",
     "\n",
     "p = Point(3,4)\n",
     "\n",
@@ -75,14 +98,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Perform some checks"
+    "### Perform some checks\n",
+    "\n",
+    "- in C++ I had private variables and methods, so that things can only be modified in way the developer wanted\n",
+    "- in Date class of C++ the user could only use developer methods which themselves check the validity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "validating date...Done\n",
+      "67\n"
+     ]
+    }
+   ],
    "source": [
     "class Date():\n",
     "    def __init__(self, day,month,year):\n",
@@ -98,9 +134,9 @@
     "    \n",
     "    @property\n",
     "    def day(self):\n",
-    "        return self._day\n",
+    "        return self._day #day not changeable by user\n",
     "    \n",
-    "    @day.setter\n",
+    "    @day.setter #day it's a decorator, setter is a method that allows u to modify the property (const) \n",
     "    def day(self, new_day):\n",
     "        self.check_validity(new_day, self._month, self._year)\n",
     "        self._day=new_day\n",
@@ -108,7 +144,93 @@
     "d = Date(5,8,1986)\n",
     "\n",
     "print(d.day)\n",
-    "d.day = 67"
+    "d.day = 67 #this calls day.setter, because there is the set operator =\n",
+    "print(d.day) #we don't have any problem here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class property in module builtins:\n",
+      "\n",
+      "class property(object)\n",
+      " |  property(fget=None, fset=None, fdel=None, doc=None) -> property attribute\n",
+      " |  \n",
+      " |  fget is a function to be used for getting an attribute value, and likewise\n",
+      " |  fset is a function for setting, and fdel a function for del'ing, an\n",
+      " |  attribute.  Typical use is to define a managed attribute x:\n",
+      " |  \n",
+      " |  class C(object):\n",
+      " |      def getx(self): return self._x\n",
+      " |      def setx(self, value): self._x = value\n",
+      " |      def delx(self): del self._x\n",
+      " |      x = property(getx, setx, delx, \"I'm the 'x' property.\")\n",
+      " |  \n",
+      " |  Decorators make defining new properties or modifying existing ones easy:\n",
+      " |  \n",
+      " |  class C(object):\n",
+      " |      @property\n",
+      " |      def x(self):\n",
+      " |          \"I am the 'x' property.\"\n",
+      " |          return self._x\n",
+      " |      @x.setter\n",
+      " |      def x(self, value):\n",
+      " |          self._x = value\n",
+      " |      @x.deleter\n",
+      " |      def x(self):\n",
+      " |          del self._x\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __delete__(self, instance, /)\n",
+      " |      Delete an attribute of instance.\n",
+      " |  \n",
+      " |  __get__(self, instance, owner, /)\n",
+      " |      Return an attribute of instance, which is of type owner.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  __set__(self, instance, value, /)\n",
+      " |      Set an attribute of instance to value.\n",
+      " |  \n",
+      " |  deleter(...)\n",
+      " |      Descriptor to change the deleter on a property.\n",
+      " |  \n",
+      " |  getter(...)\n",
+      " |      Descriptor to change the getter on a property.\n",
+      " |  \n",
+      " |  setter(...)\n",
+      " |      Descriptor to change the setter on a property.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __isabstractmethod__\n",
+      " |  \n",
+      " |  fdel\n",
+      " |  \n",
+      " |  fget\n",
+      " |  \n",
+      " |  fset\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(property)\n"
    ]
   },
   {
@@ -116,9 +238,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "help(property)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -137,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
