--- a/lectures/python/03_advanced_topics/03_error-handling.ipynb
+++ b/lectures/python/03_advanced_topics/03_error-handling.ipynb
@@ -30,9 +30,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# let's catch some common exceptions\n",
+      "\n",
+      "1/0\n",
+      "<class 'ZeroDivisionError'> : division by zero\n",
+      "---last but not least, finally is executed---\n",
+      "\n",
+      "4+unknown_var\n",
+      "<class 'NameError'> : name 'unknown_var' is not defined\n",
+      "---last but not least, finally is executed---\n",
+      "\n",
+      "\"2\"+2\n",
+      "<class 'TypeError'> : must be str, not int\n",
+      "---last but not least, finally is executed---\n",
+      "\n",
+      "int('s')\n",
+      "<class 'ValueError'> : invalid literal for int() with base 10: 's'\n",
+      "---last but not least, finally is executed---\n",
+      "\n",
+      "print 1\n",
+      "'print 1' was not caught because it causes SyntaxError\n",
+      "<class 'SyntaxError'> : Missing parentheses in call to 'print'. Did you mean print(1)? (<string>, line 1)\n",
+      "---last but not least, finally is executed---\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"# let's catch some common exceptions\\n\")\n",
     "to_execute = ['1/0',\\\n",
@@ -56,6 +86,7 @@
     "             # useful to make sure all resources are released\n",
     "             # even if an exception occurs\n",
     "             # even if no exception was caught\n",
+    "             #finally is executed always, whether or not there has been exception\n",
     "        print(\"---last but not least, finally is executed---\\n\")"
    ]
   },
@@ -68,22 +99,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is negative\n"
+     ]
+    }
+   ],
    "source": [
-    "x = -1\n",
+    "x = -3\n",
     "try:\n",
-    "    assert x>=0, 'x is negative'\n",
-    "except AssertionError as err: \n",
+    "    assert x>=0, 'x is negative' #if assert is false interrupt the program\n",
+    "    assert x>-2, 'x<-2'\n",
+    "except AssertionError as err:  #AssertionError is what is throwned(?) by an assert\n",
     "    print(err)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "day cannot be negative",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-93e7cba2619e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"day cannot be negative\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcheck_date_validity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-13-93e7cba2619e>\u001b[0m in \u001b[0;36mcheck_date_validity\u001b[0;34m(day, month, year)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcheck_date_validity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mday\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmonth\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mday\u001b[0m\u001b[0;34m<=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"day cannot be negative\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcheck_date_validity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: day cannot be negative"
+     ]
+    }
+   ],
    "source": [
     "def check_date_validity(day,month,year):\n",
     "    if day<=0:\n",
@@ -94,9 +147,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'Exception'>\n",
+      "(1, [2], {'3': 3})\n",
+      "1 [2] {'3': 3}\n",
+      "'Exception' object is not iterable\n"
+     ]
+    }
+   ],
    "source": [
     "try: \n",
     "    raise Exception(1,[2],{'3':3}) # an exception can be raised\n",
@@ -111,6 +175,13 @@
     "    except TypeError as err: \n",
     "        print(err)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -129,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
