--- a/lectures/python/03_advanced_topics/06_context_manager.ipynb
+++ b/lectures/python/03_advanced_topics/06_context_manager.ipynb
@@ -9,22 +9,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#with {thing that define a context manager} as alias:\n",
+    "#...stuff...\n",
+    "#...\n",
+    "#At the end\n",
+    "\n",
+    "#a context manager is an object that has two main methods:enter and exit. So that every time you start\n",
+    "#and quit using it you're sure something has happened\n",
+    "\n",
     "with open(\"new_file.txt\",'w') as f:\n",
     "    for i in range(10):\n",
-    "        print(i,file=f)\n",
-    "        #f.write(str(i)+'\\n')\n",
-    "f.closed"
+    "        #print(i,file=f)\n",
+    "        f.write(str(i)+'\\n')\n",
+    "f.closed\n",
+    "#here I want to check that context manager for open automatically close the file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a=[]\n",
     "with open(\"new_file.txt\",'r') as f:\n",
@@ -35,9 +66,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with open('new_file.txt') as f:\n",
     "    a = [int(i) for i in f]\n",
@@ -46,9 +88,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__enter__\n",
+      "?no gniog si tahW\n",
+      "itopinonavevanonipoti\n",
+      "__exit__\n",
+      "back to work\n"
+     ]
+    }
+   ],
    "source": [
     "# adapted from Fluent Python\n",
     "class LookingGlass:\n",
@@ -75,6 +129,13 @@
     "        \n",
     "print(\"back to work\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -93,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
