--- a/lectures/python/01_intro/01_jupyter_intro.ipynb
+++ b/lectures/python/01_intro/01_jupyter_intro.ipynb
@@ -38,18 +38,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "cell": {
+        "!": "OSMagics",
+        "HTML": "Other",
+        "SVG": "Other",
+        "bash": "Other",
+        "capture": "ExecutionMagics",
+        "debug": "ExecutionMagics",
+        "file": "Other",
+        "html": "DisplayMagics",
+        "javascript": "DisplayMagics",
+        "js": "DisplayMagics",
+        "latex": "DisplayMagics",
+        "markdown": "DisplayMagics",
+        "perl": "Other",
+        "prun": "ExecutionMagics",
+        "pypy": "Other",
+        "python": "Other",
+        "python2": "Other",
+        "python3": "Other",
+        "ruby": "Other",
+        "script": "ScriptMagics",
+        "sh": "Other",
+        "svg": "DisplayMagics",
+        "sx": "OSMagics",
+        "system": "OSMagics",
+        "time": "ExecutionMagics",
+        "timeit": "ExecutionMagics",
+        "writefile": "OSMagics"
+       },
+       "line": {
+        "alias": "OSMagics",
+        "alias_magic": "BasicMagics",
+        "autocall": "AutoMagics",
+        "automagic": "AutoMagics",
+        "autosave": "KernelMagics",
+        "bookmark": "OSMagics",
+        "cat": "Other",
+        "cd": "OSMagics",
+        "clear": "KernelMagics",
+        "colors": "BasicMagics",
+        "config": "ConfigMagics",
+        "connect_info": "KernelMagics",
+        "cp": "Other",
+        "debug": "ExecutionMagics",
+        "dhist": "OSMagics",
+        "dirs": "OSMagics",
+        "doctest_mode": "BasicMagics",
+        "ed": "Other",
+        "edit": "KernelMagics",
+        "env": "OSMagics",
+        "gui": "BasicMagics",
+        "hist": "Other",
+        "history": "HistoryMagics",
+        "killbgscripts": "ScriptMagics",
+        "ldir": "Other",
+        "less": "KernelMagics",
+        "lf": "Other",
+        "lk": "Other",
+        "ll": "Other",
+        "load": "CodeMagics",
+        "load_ext": "ExtensionMagics",
+        "loadpy": "CodeMagics",
+        "logoff": "LoggingMagics",
+        "logon": "LoggingMagics",
+        "logstart": "LoggingMagics",
+        "logstate": "LoggingMagics",
+        "logstop": "LoggingMagics",
+        "ls": "Other",
+        "lsmagic": "BasicMagics",
+        "lx": "Other",
+        "macro": "ExecutionMagics",
+        "magic": "BasicMagics",
+        "man": "KernelMagics",
+        "matplotlib": "PylabMagics",
+        "mkdir": "Other",
+        "more": "KernelMagics",
+        "mv": "Other",
+        "notebook": "BasicMagics",
+        "page": "BasicMagics",
+        "pastebin": "CodeMagics",
+        "pdb": "ExecutionMagics",
+        "pdef": "NamespaceMagics",
+        "pdoc": "NamespaceMagics",
+        "pfile": "NamespaceMagics",
+        "pinfo": "NamespaceMagics",
+        "pinfo2": "NamespaceMagics",
+        "pip": "BasicMagics",
+        "popd": "OSMagics",
+        "pprint": "BasicMagics",
+        "precision": "BasicMagics",
+        "profile": "BasicMagics",
+        "prun": "ExecutionMagics",
+        "psearch": "NamespaceMagics",
+        "psource": "NamespaceMagics",
+        "pushd": "OSMagics",
+        "pwd": "OSMagics",
+        "pycat": "OSMagics",
+        "pylab": "PylabMagics",
+        "qtconsole": "KernelMagics",
+        "quickref": "BasicMagics",
+        "recall": "HistoryMagics",
+        "rehashx": "OSMagics",
+        "reload_ext": "ExtensionMagics",
+        "rep": "Other",
+        "rerun": "HistoryMagics",
+        "reset": "NamespaceMagics",
+        "reset_selective": "NamespaceMagics",
+        "rm": "Other",
+        "rmdir": "Other",
+        "run": "ExecutionMagics",
+        "save": "CodeMagics",
+        "sc": "OSMagics",
+        "set_env": "OSMagics",
+        "store": "StoreMagics",
+        "sx": "OSMagics",
+        "system": "OSMagics",
+        "tb": "ExecutionMagics",
+        "time": "ExecutionMagics",
+        "timeit": "ExecutionMagics",
+        "unalias": "OSMagics",
+        "unload_ext": "ExtensionMagics",
+        "who": "NamespaceMagics",
+        "who_ls": "NamespaceMagics",
+        "whos": "NamespaceMagics",
+        "xdel": "NamespaceMagics",
+        "xmode": "BasicMagics"
+       }
+      },
+      "text/plain": [
+       "Available line magics:\n",
+       "%alias  %alias_magic  %autocall  %automagic  %autosave  %bookmark  %cat  %cd  %clear  %colors  %config  %connect_info  %cp  %debug  %dhist  %dirs  %doctest_mode  %ed  %edit  %env  %gui  %hist  %history  %killbgscripts  %ldir  %less  %lf  %lk  %ll  %load  %load_ext  %loadpy  %logoff  %logon  %logstart  %logstate  %logstop  %ls  %lsmagic  %lx  %macro  %magic  %man  %matplotlib  %mkdir  %more  %mv  %notebook  %page  %pastebin  %pdb  %pdef  %pdoc  %pfile  %pinfo  %pinfo2  %popd  %pprint  %precision  %profile  %prun  %psearch  %psource  %pushd  %pwd  %pycat  %pylab  %qtconsole  %quickref  %recall  %rehashx  %reload_ext  %rep  %rerun  %reset  %reset_selective  %rm  %rmdir  %run  %save  %sc  %set_env  %store  %sx  %system  %tb  %time  %timeit  %unalias  %unload_ext  %who  %who_ls  %whos  %xdel  %xmode\n",
+       "\n",
+       "Available cell magics:\n",
+       "%%!  %%HTML  %%SVG  %%bash  %%capture  %%debug  %%file  %%html  %%javascript  %%js  %%latex  %%markdown  %%perl  %%prun  %%pypy  %%python  %%python2  %%python3  %%ruby  %%script  %%sh  %%svg  %%sx  %%system  %%time  %%timeit  %%writefile\n",
+       "\n",
+       "Automagic is ON, % prefix IS NOT needed for line magics."
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%lsmagic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01_jupyter_intro.ipynb\n",
+      "02_surving_kit.ipynb\n",
+      "03_lists.ipynb\n",
+      "04_tuples.ipynb\n",
+      "05_dictionaries.ipynb\n",
+      "06_sets.ipynb\n",
+      "07_functions.ipynb\n",
+      "readme.md\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash \n",
     "for i in $(ls)\n",
@@ -60,9 +221,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01_jupyter_intro.ipynb\r\n",
+      "02_surving_kit.ipynb\r\n",
+      "03_lists.ipynb\r\n",
+      "04_tuples.ipynb\r\n",
+      "05_dictionaries.ipynb\r\n",
+      "06_sets.ipynb\r\n",
+      "07_functions.ipynb\r\n"
+     ]
+    }
+   ],
    "source": [
     "!ls | grep ipy"
    ]
@@ -83,9 +258,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12345"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# expression that returns something\n",
     "12345"
@@ -93,9 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12345"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# that something was assigned to \"_\"\n",
     "_"
@@ -103,41 +300,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Error example: division by 0\n",
-    "1/0"
+    "1/1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print = 7"
+    "print = 7 #LITERLALY EVERYTHING IS AN OBJECT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-8afe427bbfb4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hello world\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "print(\"hello world\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n",
+      "hello world\n"
+     ]
+    }
+   ],
    "source": [
     "%reset\n",
+    "#every function, variable EVERYTHING IS WIPED OUT\n",
     "print(\"hello world\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -156,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
