--- a/lectures/python/01_intro/03_lists.ipynb
+++ b/lectures/python/01_intro/03_lists.ipynb
@@ -5,17 +5,26 @@
    "metadata": {},
    "source": [
     "## Lists\n",
-    " - mutable\n",
-    " - resizable\n",
+    " - mutable: u can change the size of the list\n",
+    " - resizable: change the size of element\n",
     " - stored objects can change\n",
     " - object can be of different type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 'string', 4.5]\n",
+      "[1, True, 4.5]\n"
+     ]
+    }
+   ],
    "source": [
     "l = [] \n",
     "l.append(1)\n",
@@ -36,11 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "empty_list: []\n",
+      "list_from_range: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "list_from_string: ['h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd']\n"
+     ]
+    }
+   ],
    "source": [
-    "empty_list = list()\n",
+    "empty_list = list() #approx a constructor for a list\n",
     "print(\"empty_list:\", empty_list)\n",
     "list_from_range = list(range(10))\n",
     "print(\"list_from_range:\", list_from_range)\n",
@@ -61,9 +80,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2]\n",
+      "[0, 1, 2]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "print(list_from_range[0:3:1]) # print first 3 elements\n",
     "print(list_from_range[:3])\n",
@@ -80,11 +109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "print(len(list_from_range))"
+    "print(len(list_from_range)) #len function will call the method which will give u the size: it's a unique interface"
    ]
   },
   {
@@ -99,15 +136,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 'h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd']\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[1, True, 4.5, 1, True, 4.5, 1, True, 4.5]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "print(list_from_range + list_from_string)\n",
     "print(list_from_range)\n",
     "\n",
-    "print(l*3)\n",
-    "print(l)"
+    "print(l*3) #replicate the list 3 times\n",
+    "print(list_from_range*3) #it does not do it elementwise!"
    ]
   },
   {
@@ -119,13 +167,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['_', '_', '_'], ['_', '_', '_'], ['_', '_', '_']]\n",
+      "[['_', 'X', '_'], ['_', 'X', '_'], ['_', 'X', '_']]\n"
+     ]
+    }
+   ],
    "source": [
     "board = [['_']*3]*3\n",
     "print(board)\n",
-    "board[1][1] = 'X'\n",
+    "board[1][1] = 'X' #ATTENTION TO SHALOW COPIES!they're default because they're cheaper (aliases)\n",
     "print(board)"
    ]
   },
@@ -140,9 +197,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['_', '_', '_'], ['_', '_', '_'], ['_', '_', '_']]\n",
+      "[['_', '_', '_'], ['_', 'X', '_'], ['_', '_', '_']]\n"
+     ]
+    }
+   ],
    "source": [
     "board = [['_']*3 for i in range(3)]\n",
     "print(board)\n",
@@ -152,11 +218,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd_numbers [1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+      "even_numbers [0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
+     ]
+    }
+   ],
    "source": [
-    "odd_numbers = [n for n in range(20) if n%2]\n",
+    "odd_numbers = [n for n in range(20) if n%2] #0==FALSE\n",
     "print (\"odd_numbers\",odd_numbers)\n",
     "even_numbers = [n for n in range(20) if not n%2]\n",
     "print(\"even_numbers\",even_numbers)"
@@ -173,9 +248,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sorted(l) [1, 2, 4, 5, 10]\n",
+      "l [5, 10, 1, 4, 2]\n",
+      "l after l.sort() [1, 2, 4, 5, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "l = [5,10,1,4,2]\n",
     "print(\"sorted(l)\",sorted(l))\n",
@@ -190,15 +275,27 @@
    "source": [
     "### delete items\n",
     " - `del list[idx]` remove element with offset `idx`. `del` is a Python statement\n",
-    " - `list.pop[idx]` remove element with offset `idx` and return it\n",
+    " - `list.pop(idx)` remove element with offset `idx` and return it\n",
     " - `list.remove(val)` remove element whose value is val "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l [0, 1, 2, 3, 4]\n",
+      "l [0, 2, 3, 4]\n",
+      "l [0, 2, 3]\n",
+      "a 4\n",
+      "l [0, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "l = list(range(5))\n",
     "print(\"l\",l)\n",
@@ -210,6 +307,13 @@
     "l.remove(2)\n",
     "print(\"l\",l)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -228,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
