--- a/lectures/python/01_intro/04_tuples.ipynb
+++ b/lectures/python/01_intro/04_tuples.ipynb
@@ -12,9 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 2, 4, 6, 8)\n",
+      "('s', 't', 'r', 'i', 'n', 'g')\n"
+     ]
+    }
+   ],
    "source": [
     "empty_tuple = ()  # or empty_tuple = tuple()\n",
     "t = tuple(range(10))\n",
@@ -25,9 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-dcadaedd35b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m \u001b[0;31m# error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "t[0] = 5 # error"
    ]
@@ -41,9 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('first', 'second')\n"
+     ]
+    }
+   ],
    "source": [
     "a = 'first'\n",
     "b = 'second'\n",
@@ -60,9 +89,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f: first \n",
+      "s: second\n",
+      "[('me', 'black'), ('me', 'white'), ('you', 'black'), ('you', 'white'), ('other', 'black'), ('other', 'white')]\n"
+     ]
+    }
+   ],
    "source": [
     "t = a,b\n",
     "f,s = t\n",
@@ -73,7 +112,8 @@
     "colors = ('black', 'white')\n",
     "players = ('me', 'you','other')\n",
     "\n",
-    "tournament=[(p,c) for p in players for c in colors ]\n"
+    "tournament=[(p,c) for p in players for c in colors ]\n",
+    "print(tournament)"
    ]
   },
   {
@@ -85,9 +125,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imp: important \n",
+      "vip: very important\n"
+     ]
+    }
+   ],
    "source": [
     "t = ('important', 'nothing', 'very important', 'forget it')\n",
     "imp,_,vip,_ = t\n",
@@ -103,15 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "2 1\n"
+     ]
+    }
+   ],
    "source": [
     "a = 1\n",
     "b = 2\n",
     "print(a,b)\n",
     "\n",
-    "a,b = b,a\n",
+    "a,b = b,a #tuple packing and unpacking\n",
     "\n",
     "print(a,b)"
    ]
@@ -125,9 +183,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, [3, 4])\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-93dbc96e12c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "t = (1,2, [3,4])\n",
     "print(t)\n",
@@ -136,9 +213,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, [3, 4, 5, 6])\n"
+     ]
+    }
+   ],
    "source": [
     "print(t)"
    ]
@@ -154,13 +239,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contact(Name='alberto', Surname='sartori', Email='as@mail.it', Phone='33344448888') is a <class '__main__.Contact'>\n",
+      "alberto sartori as@mail.it 33344448888\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import namedtuple\n",
-    "contact = namedtuple(\"Contact\", \"Name Surname Email Phone\")\n",
-    "myContact = contact(\"alberto\",\"sartori\",\"as@mail.it\",\"33344448888\")\n",
+    "contact = namedtuple(\"Contact\", \"Name Surname Email Phone\") #u construct a namedtuple with that fields and call it contact\n",
+    "myContact = contact(\"alberto\",\"sartori\",\"as@mail.it\",\"33344448888\") #mycontact is a contact\n",
     "\n",
     "name,surname,email,phone=myContact\n",
     "print(myContact,\"is a\",type(myContact))\n",
@@ -169,18 +263,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__new__() takes 5 positional arguments but 6 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-ea3423676829>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwrong\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcontact\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"alberto\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"sartori\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"as@mail.it\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"33344448888\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"wrong arg\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: __new__() takes 5 positional arguments but 6 were given"
+     ]
+    }
+   ],
    "source": [
     "wrong = contact(\"alberto\",\"sartori\",\"as@mail.it\",\"33344448888\", \"wrong arg\") # error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__new__() missing 3 required positional arguments: 'Surname', 'Email', and 'Phone'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-287f12c816db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwrong\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcontact\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"too few\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: __new__() missing 3 required positional arguments: 'Surname', 'Email', and 'Phone'"
+     ]
+    }
+   ],
    "source": [
     "wrong = contact(\"too few\") # error"
    ]
@@ -196,13 +314,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72.8 ns ± 0.751 ns per loop (mean ± std. dev. of 7 runs, 10000000 loops each)\n",
+      "12.5 ns ± 0.177 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit l = [0,1,2,3,4,5,6,7,8,9]\n",
     "%timeit t = (0,1,2,3,4,5,6,7,8,9)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -221,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
