--- a/lectures/python/01_intro/06_sets.ipynb
+++ b/lectures/python/01_intro/06_sets.ipynb
@@ -12,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'> {0, 2, 4, 6, 8, 10}\n"
+     ]
+    }
+   ],
    "source": [
     "empty_set = set() # cannot no other symbols can be used for an empty set\n",
     "even_numbers = {0,2,4,6,8,10}\n",
@@ -23,9 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 128, 2, 4, 6, 8}\n"
+     ]
+    }
+   ],
    "source": [
     "even_numbers = {0,0,0,2,2,4,6,8,8,8,128}\n",
     "print(even_numbers)"
@@ -33,9 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 5, 7, 9} <class 'set'>\n"
+     ]
+    }
+   ],
    "source": [
     "odd_numbers = {n for n in range(10) if n%2}\n",
     "print(odd_numbers, type(odd_numbers))"
@@ -43,18 +67,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "2 in odd_numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "2 in even_numbers"
    ]
@@ -68,9 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 128, 3, 2, 5, 4, 7, 6, 9, 8}\n",
+      "{0, 1, 128, 3, 2, 5, 4, 7, 6, 9, 8}\n"
+     ]
+    }
+   ],
    "source": [
     "all_numbers = odd_numbers.union(even_numbers)\n",
     "print(all_numbers)\n",
@@ -87,9 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "empty = odd_numbers.intersection(even_numbers)\n",
     "print(empty)\n",
@@ -105,15 +168,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set1 - set2 --> {4, 5}\n",
+      "set2 - set1 --> set()\n"
+     ]
+    }
+   ],
    "source": [
     "set1 = {1,2,3,4,5}\n",
     "set2 = {1,2,3}\n",
     "print(\"set1 - set2 -->\", set1-set2)\n",
     "print(\"set2 - set1 -->\", set2-set1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -132,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
