--- a/lectures/python/02_variables_and_functions/02_functions.ipynb
+++ b/lectures/python/02_variables_and_functions/02_functions.ipynb
@@ -14,9 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'function'>\n",
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
     "def hello():\n",
     "    print(\"hello\")\n",
@@ -36,9 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "145183092028285869634070784086308284983740379224208358846781574688061991349156420080065207861248000000000000000000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def factorial(n):\n",
     "    return 1 if n<2 else n * factorial(n-1)\n",
@@ -55,22 +75,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a got to_a\n",
+      "b got to_b\n",
+      "c got to_c\n"
+     ]
+    }
+   ],
    "source": [
     "def abc(a,b,c):\n",
     "    for i in ('a','b','c'):\n",
-    "        print(i,\"got\",eval(i))\n",
+    "        print(i,\"got\",eval(i)) #print name of variable, content of variable\n",
     "\n",
     "abc('to_a', 'to_b', 'to_c')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a got to_a\n",
+      "b got to_b\n",
+      "c got to_c\n"
+     ]
+    }
+   ],
    "source": [
     "abc(b = 'to_b', c = 'to_c', a = 'to_a')"
    ]
@@ -84,9 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a got to_a\n",
+      "b got to_b\n",
+      "c got to_c\n"
+     ]
+    }
+   ],
    "source": [
     "def abc_keyword_only(*,a,b,c):\n",
     "    for i in ('a','b','c'):\n",
@@ -105,9 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a got default_a\n",
+      "b got to_b\n",
+      "c got default_c\n"
+     ]
+    }
+   ],
    "source": [
     "def abc_with_default(a='default_a',\n",
     "                     b='default_b',\n",
@@ -126,9 +186,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function foo in module __main__:\n",
+      "\n",
+      "foo()\n",
+      "    string documenting foo(). \n",
+      "    accessible via help(foo)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def foo():\n",
     "    '''\n",
@@ -149,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,9 +233,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function complicated_function in module __main__:\n",
+      "\n",
+      "complicated_function(text:str, max_len:'int>0'=80) -> str\n",
+      "    documentation for complicated_function\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(complicated_function)"
    ]
@@ -201,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
