--- a/lectures/python/02_variables_and_functions/05_copy_deepcopy.ipynb
+++ b/lectures/python/02_variables_and_functions/05_copy_deepcopy.ipynb
@@ -4,12 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Shallow is the default"
+    "### Shallow is the default\n",
+    "Because it's an alias => cheaper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,63 +20,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o == l #comparison by value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o is l #comparison by memory adress"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(140675894947208, 140675954968520)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(o), id(l) #return unique integer number 4 every DISTINCT object.\n",
+    " #It's a map, but not always referred to mem address"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "o = list(l) #can not refers to same mem location, so create a new one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "o == l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "o is l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "id(o), id(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "o = list(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "o == l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "o is l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, [4, 5, 6], 8, 9, 9]\n",
+      "[1, 2, [4, 5, 6], 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "l.append(9)\n",
     "print(l)\n",
@@ -84,18 +150,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, [4, 5, 6, 7, 888, 7], 8, 9, 9]\n",
+      "[1, 2, [4, 5, 6, 7, 888, 7], 8, 9, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "l[2].append(7)\n",
     "print(l)\n",
-    "print(o)"
+    "print(o) #why o modified? because it's a list of lists! so even the inner list is a shallow copy!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,11 +179,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, [4, 5, 6, 7, 888, 7, 888, 888], 8, 9, 9]\n",
+      "[1, 2, [4, 5, 6, 7, 888, 7, 888, 888], 8, 9, 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "o = copy.copy(l)\n",
+    "o = copy.copy(l) #shallowe copy\n",
     "l[2].append(888)\n",
     "print(l)\n",
     "print(o)"
@@ -116,14 +200,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, [4, 5, 6, 7, 888, 7, 888, 888, 3333], 8, 9, 9]\n",
+      "[1, 2, [4, 5, 6, 7, 888, 7, 888, 888], 8, 9, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "o = copy.deepcopy(l)\n",
     "l[2].append(3333)\n",
     "print(l)\n",
-    "print(o)"
+    "print(o)\n",
+    "#when u invoke a function u PASS BY SHARING: you pass a shallow copy"
    ]
   }
  ],
@@ -143,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
