--- a/lectures/python/02_variables_and_functions/07_classes.ipynb
+++ b/lectures/python/02_variables_and_functions/07_classes.ipynb
@@ -11,26 +11,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n"
+     ]
+    }
+   ],
    "source": [
     "class Point():\n",
-    "    def __init__(self, x, y):\n",
-    "        self.x = x\n",
+    "    def __init__(self, x, y): #contructor: it's called __init__(self,_*). self it's MANDATORY and at least 2 args\n",
+    "        self.x = x            #here are the variables/data\n",
     "        self.y = y\n",
     "        \n",
     "    def method_with_no_arg(self): # if you remove self --> error\n",
     "        print(\"no args!\")\n",
     "    \n",
     "    def update(self, x, y): # do I really need this?\n",
-    "        self.x = x\n",
+    "        self.x = x     #everything is public, so there's no need if u do something usual\n",
     "        self.y = y\n",
+    "        \n",
+    "    def nope_update(self, a, b): \n",
+    "        x = a     #forgetting self does not give error: it just creates local variables x and y\n",
+    "        y = b     #but does not change the value of x or y=>bugs, no error! REMEMBER SELF BITCH!\n",
     "    \n",
-    "    def print(self): # is this pythonic?\n",
+    "    def print(self): # is this pythonic?Nope\n",
     "        print(self.x, self.y)\n",
     "        \n",
-    "    def equal(self, other): # is this pythonic?\n",
+    "    def equal(self, other): # is this pythonic?Nope\n",
     "        return (self.x, self.y) == (other.x, other.y)\n",
     "\n",
     "p = Point(1,2)\n",
@@ -39,9 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 8\n",
+      "0 0\n"
+     ]
+    }
+   ],
    "source": [
     "p.update(7,8)\n",
     "p.print()\n",
@@ -52,18 +73,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no args!\n"
+     ]
+    }
+   ],
    "source": [
     "p.method_with_no_arg()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p2 = Point(1,0)\n",
     "p.equal(p2)"
@@ -78,9 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point coordinates: 3, 4\n"
+     ]
+    }
+   ],
    "source": [
     "class Point():\n",
     "    '''Documention of class Point'''\n",
@@ -90,21 +138,37 @@
     "            \n",
     "    def __str__(self):\n",
     "        #return str((self.x,self.y))\n",
-    "        return 'Point: {0}, {1}'.format(self.x, self.y)\n",
+    "        #it's the overload of the function that converts in textual\n",
+    "        return 'Point coordinates: {0}, {1}'.format(self.x, self.y)\n",
+    "    #construct a string: \"string {0}{1}\" with {0},{1} placeholders for args of format\n",
     "    \n",
     "    def __eq__(self, other):\n",
     "        #return self.x == other.x and self.y == other.y\n",
     "        return (self.x,self.y) == (other.x, other.y)\n",
+    "        #it's like overloading ==\n",
     "        \n",
     "p = Point(3,4)\n",
-    "print(p)"
+    "print(p)\n",
+    "\n",
+    "#dounder methods: __str__ is a method that should return a string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p2 = Point(4,5)\n",
     "p == p2"
@@ -112,19 +176,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p2.x, p2.y = 3 ,4\n",
-    "p == p2"
+    "p == p2 #why does not complain if I not define ==? because they inherits from the same class and the default is\n",
+    "#the comparison between the id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on Point in module __main__ object:\n",
+      "\n",
+      "class Point(builtins.object)\n",
+      " |  Documention of class Point\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __eq__(self, other)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __init__(self, x, y)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  __str__(self)\n",
+      " |      Return str(self).\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __hash__ = None\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(p)"
    ]
@@ -146,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
