--- a/lectures/python/03_advanced_topics/04_inheritance.ipynb
+++ b/lectures/python/03_advanced_topics/04_inheritance.ipynb
@@ -5,14 +5,32 @@
    "metadata": {},
    "source": [
     "##  Inheritance\n",
-    " - instead of duck typing"
+    " - instead of duck typing: is when it's not important that is a duck, but it behaves like a duck"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bau\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Animal:\n",
     "    def __init__(self):\n",
@@ -20,8 +38,8 @@
     "    def speak(self):\n",
     "        print(\"unknown\")\n",
     "\n",
-    "class Dog(Animal):\n",
-    "    def speak(self):\n",
+    "class Dog(Animal): #this is inheritance syntax\n",
+    "    def speak(self): #overwrite things in Father, no problem\n",
     "        print(\"Bau\")\n",
     "        \n",
     "d = Dog()\n",
@@ -34,19 +52,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method resolution order"
+    "### Method resolution order\n",
+    "- when u search 4 a method you start from yourself, than u ask for the first defined father (B for E)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E foo\n",
+      "_score 42\n",
+      "__find_this 99\n",
+      "B foo\n",
+      "D foo\n",
+      "A foo\n",
+      "42\n",
+      "(<class '__main__.E'>, <class '__main__.B'>, <class '__main__.C'>, <class '__main__.D'>, <class '__main__.A'>, <class 'object'>)\n"
+     ]
+    }
+   ],
    "source": [
     "class A:\n",
     "    def __init__(self):\n",
     "        self._score = 42\n",
-    "        self.__find_this = 99 # kind of private\n",
+    "        self.__find_this = 99 # kind of private: try to uncomment and print in class E: error\n",
     "    def foo(self):\n",
     "        print(\"A foo\")\n",
     "        \n",
@@ -71,14 +105,17 @@
     "        \n",
     "    def bar(self):\n",
     "        self.foo() \n",
-    "        super().foo() \n",
-    "        D.foo(self)   # unbound method --> you have to pass self\n",
-    "        A.foo(self)\n",
+    "        super().foo() #super allows u to skip yourself: super(E) searches foo in B,C,D not in E itself.Finds B\n",
+    "        D.foo(self)   # unbound method --> you have to pass self. Class D can even be completely unrelated\n",
+    "        A.foo(self)   #u can call a method that it's not yours nor your parent\n",
     "        print(self._score)\n",
     "\n",
     "e = E()\n",
     "e.bar()\n",
-    "print (E.__mro__)"
+    "print (E.__mro__) #method resolution order for class E: order for search\n",
+    "\n",
+    "#self.__find_this: like private in the sense that the double underscore makes it from self.__x to self._A__x:\n",
+    "#in order to access it from outside you have to call it that way"
    ]
   },
   {
@@ -90,14 +127,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "print(isinstance(e,A))\n",
+    "#type(x) returns a string and polymorphism is not a thing\n",
+    "print(isinstance(e,A)) #the object A is of class E which inherited by A, so e is A\n",
     "print(isinstance(e,dict))\n",
-    "print(isinstance(B,A))\n",
-    "print(issubclass(B,A))"
+    "print(isinstance(B,A)) #the two classes are not the same things\n",
+    "print(issubclass(B,A)) #VERY USEFUL"
    ]
   },
   {
@@ -110,11 +159,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Can't instantiate abstract class Animal with abstract methods speak",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-7f98701ba57d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mspeak\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAnimal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# expect error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: Can't instantiate abstract class Animal with abstract methods speak"
+     ]
+    }
+   ],
    "source": [
-    "import abc\n",
+    "import abc #it's a module\n",
     "\n",
     "#class Animal(metaclass = abc.ABCMeta):\n",
     "class Animal(abc.ABC):\n",
@@ -124,14 +185,23 @@
     "    @abc.abstractmethod\n",
     "    def speak(self): pass\n",
     "\n",
-    "a = Animal() # expect error"
+    "a = Animal() # expect error. Didn't understand why!?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bau\n",
+      "1 Fido\n"
+     ]
+    }
+   ],
    "source": [
     "class Dog(Animal):\n",
     "    def speak(self):\n",
@@ -140,6 +210,13 @@
     "d.speak()\n",
     "print(d.age, d.name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -158,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
