--- a/lectures/python/03_advanced_topics/07_unittest.ipynb
+++ b/lectures/python/03_advanced_topics/07_unittest.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "##  Unit-testing\n",
-    "- `unittest`\n",
+    "- `unittest` : model u import\n",
     "- `if __name__ == '__main__':`\n",
     "- `__all__`\n",
-    "- RTFM https://docs.python.org/3/library/unittest.html"
+    "- RTFM https://docs.python.org/3/library/unittest.html: Read the Fantastic Manual"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
